YUK-4270 YUK-4262 YUK-4269
- Springified STARS.
- Coded to Interfaces with Generics.
- fixed exposed ClassCastException errors.
- Added new STARS Database DAO's and Model Objects.
- legacy STARS /servlet url patterns mapped to new Spring Controllers.